ramper/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ${STATEFUL_SET}
  namespace: ${NAMESPACE}
spec:
  serviceName: ${SERVICE}
  selector:
    matchLabels:
      service: ${SERVICE}
  template:
    metadata:
      labels:
        service: ${SERVICE}
    spec:
      runtimeClassName: gvisor
      nodeSelector:
        cloud.google.com/gke-nodepool: apps

      volumes:
      - name: ${SERVICE_VOLUME}
        persistentVolumeClaim:
          claimName: ${SERVICE_VOLUME}

      containers:
      - name: ramper
        image: ${RAMPER_IMAGE}
        imagePullPolicy: Always
        ports:
        - name: ${TARGET_PORT}
          containerPort: 80
        readinessProbe: &readinessProbe
          httpGet:
            path: /
            port: ${TARGET_PORT}
          timeoutSeconds: 5
          initialDelaySeconds: 15
        livenessProbe: *readinessProbe

      - name: ramper-db
        image: mysql
        imagePullPolicy: Always
        volumeMounts:
        - name: ${SERVICE_VOLUME}
          mountPath: /var/lib/mysql
          subPath: db
