ramper/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${INGRESS}
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ${IP_NAME}
    networking.gke.io/managed-certificates: ${MANAGED_CERT}
    networking.gke.io/v1beta1.FrontendConfig: ${FRONTEND_CONFIG}
spec:
  rules:
  - host: ${DNS_HOSTNAME}
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: ${SERVICE}
            port:
              name: ${SERVICE_PORT}
---
apiVersion: v1
kind: Service
metadata:
  name: ${SERVICE}
  namespace: ${NAMESPACE}
  annotations:
    cloud.google.com/neg: |
      {
        "ingress": true
      }
    cloud.google.com/backend-config: |
      {
        "ports": {
          "${SERVICE_PORT}": "${BACKEND_CONFIG}"
        }
      }
spec:
  type: NodePort
  selector:
    service: ${SERVICE}
  ports:
  - name: ${SERVICE_PORT}
    port: 80
    targetPort: ${TARGET_PORT}
